--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <img src="mocha4.gif" alt="Osito Triste" style="width: 60%; height: 60%;">
         </div>
         
-        <h1 id="question">¿Quieres ser mi San valentín?</h1>
+        <h1 id="question">Me vas a hacer caso en todo amor?</h1>
         <div id="messageContainer" style="display: none;"></div>
 
         <button id="siBtn">Sí</button>
